--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,8 +38,8 @@ jobs:
     if: github.event.repository.owner.id == github.event.sender.id
     strategy:
       matrix:
-        VERSION: [21.02, 22.03]
-        SET: [docker]
+        VERSION: [22.03]
+        SET: [non-docker,docker]
 
     steps:
     - name: Checkout
@@ -147,7 +147,7 @@ jobs:
 
     strategy:
       matrix:
-        VERSION: [21.02, 22.03]
+        VERSION: [22.03]
         CPU: [rk3328, rk3399, rk3568, rk3588]
         SET: [docker, non-docker]
     steps:
